fix: made the parameters dd_version and container_image not required

--- a/action.yml
+++ b/action.yml
@@ -8,12 +8,12 @@ inputs:
   values_file:
     description: 'yml file containing the values to be replaced in the generated task definition file.'
     required: true
-  dd_version:
-    description: 'datadog version string for the generated task definition'
-    required: true
   container_image:
     description: 'docker image arn with the commit tag'
-    required: true
+    required: false
+  dd_version:
+    description: 'datadog version string for the generated task definition'
+    required: false
 
 branding:
   color: 'gray-dark'
