--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
-    "@actions/artifact": "^1.1.1",
+    "@actions/artifact": "^2.2.1",
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "ncc": "^0.3.6"
   },
   "name": "generate-task-definition-file",
   "description": "",
